--- a/series.conf
+++ b/series.conf
@@ -13155,6 +13155,7 @@
 	patches.suse/0145-drm-nouveau-disp-add-dp-mst-id-get-put-methods.patch
 	patches.suse/0146-drm-nouveau-disp-move-outp-conn-construction-to-chip.patch
 	patches.suse/0147-drm-nouveau-disp-move-outp-init-fini-paths-to-chipse.patch
+	patches.suse/0148-drm-nouveau-disp-nv50-skip-DCB_OUTPUT_TV.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
