--- a/series.conf
+++ b/series.conf
@@ -13335,6 +13335,7 @@
 	patches.suse/0325-drm-i915-color-move-SKL-gamma-and-CSC-enable-read-to.patch
 	patches.suse/0326-drm-i915-color-move-pre-SKL-gamma-and-CSC-enable-rea.patch
 	patches.suse/0327-drm-i915-hdcp-Use-intel_connector-argument-in-intel_.patch
+	patches.suse/0328-drm-i915-hdcp-Propagate-aux-info-in-DP-HDCP-function.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
