--- a/series.conf
+++ b/series.conf
@@ -13338,6 +13338,7 @@
 	patches.suse/0328-drm-i915-hdcp-Propagate-aux-info-in-DP-HDCP-function.patch
 	patches.suse/0329-drm-i915-hdcp-Send-the-correct-aux-for-DPMST-HDCP-sc.patch
 	patches.suse/0330-drm-i915-hdcp-Adjust-timeout-for-read-in-DPMST-Scena.patch
+	patches.suse/0331-drm-i915-sdvo-Nuke-attached_output-tracking.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
