--- a/series.conf
+++ b/series.conf
@@ -13341,6 +13341,7 @@
 	patches.suse/0331-drm-i915-sdvo-Nuke-attached_output-tracking.patch
 	patches.suse/0332-drm-i915-sdvo-Initialize-the-encoder-earlier.patch
 	patches.suse/0333-drm-i915-sdvo-Nuke-the-duplicate-sdvo-port.patch
+	patches.suse/0334-drm-i915-sdvo-Get-rid-of-the-per-connector-i2c-symli.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
