--- a/series.conf
+++ b/series.conf
@@ -13345,6 +13345,7 @@
 	patches.suse/0335-drm-i915-sdvo-Rework-DDC-bus-handling.patch
 	patches.suse/0336-drm-i915-sdvo-Print-out-the-i2c-pin-and-slave-addres.patch
 	patches.suse/0337-drm-i915-psr-Apply-Wa_14015648006-for-all-display-14.patch
+	patches.suse/0338-drm-display-dp-Assume-8-bpc-support-when-DSC-is-supp.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
