--- a/series.conf
+++ b/series.conf
@@ -13347,6 +13347,7 @@
 	patches.suse/0337-drm-i915-psr-Apply-Wa_14015648006-for-all-display-14.patch
 	patches.suse/0338-drm-display-dp-Assume-8-bpc-support-when-DSC-is-supp.patch
 	patches.suse/0339-drivers-drm-i915-Honor-limits-max_bpp-while-computin.patch
+	patches.suse/0340-drm-i915-dg2-Add-support-for-new-DG2-G12-revid-0x1.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
