--- a/series.conf
+++ b/series.conf
@@ -13350,6 +13350,7 @@
 	patches.suse/0340-drm-i915-dg2-Add-support-for-new-DG2-G12-revid-0x1.patch
 	patches.suse/0341-drm-i915-dp-Drop-redundant-AUX-power-get-put-in-inte.patch
 	patches.suse/0342-drm-i915-mtl-Add-TC-port-lockdep-assert-to-AUX-power.patch
+	patches.suse/0343-drm-i915-add-minimal-i915_gem_object_frontbuffer.h.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
