--- a/series.conf
+++ b/series.conf
@@ -13353,6 +13353,7 @@
 	patches.suse/0343-drm-i915-add-minimal-i915_gem_object_frontbuffer.h.patch
 	patches.suse/0344-drm-i915-hdcp-Use-intel_connector-as-argument-for-hd.patch
 	patches.suse/0345-drm-i915-hdcp-Use-correct-aux-for-capability-check-s.patch
+	patches.suse/0346-drm-edid-add-drm_edid_is_digital.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
