--- a/series.conf
+++ b/series.conf
@@ -13355,6 +13355,7 @@
 	patches.suse/0345-drm-i915-hdcp-Use-correct-aux-for-capability-check-s.patch
 	patches.suse/0346-drm-edid-add-drm_edid_is_digital.patch
 	patches.suse/0347-drm-i915-display-use-drm_edid_is_digital.patch
+	patches.suse/0348-drm-edid-parse-source-physical-address.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
