--- a/series.conf
+++ b/series.conf
@@ -13359,6 +13359,7 @@
 	patches.suse/0349-drm-cec-add-drm_dp_cec_attach-as-the-non-edid-versio.patch
 	patches.suse/0350-drm-i915-cec-switch-to-setting-physical-address-dire.patch
 	patches.suse/0351-drm-i915-fbc-Clear-frontbuffer-busy-bits-on-flip.patch
+	patches.suse/0352-drm-i915-psr-Clear-frontbuffer-busy-bits-on-flip.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
