--- a/series.conf
+++ b/series.conf
@@ -13362,6 +13362,7 @@
 	patches.suse/0352-drm-i915-psr-Clear-frontbuffer-busy-bits-on-flip.patch
 	patches.suse/0353-drm-i915-Add-new-frontbuffer-tracking-interface-to-q.patch
 	patches.suse/0354-drm-i915-Handle-dma-fences-in-dirtyfb-callback.patch
+	patches.suse/0355-drm-i915-vdsc-Refactor-dsc-register-field-macro.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
