--- a/series.conf
+++ b/series.conf
@@ -13371,6 +13371,7 @@
 	patches.suse/0361-drm-i915-vdsc-Fill-the-intel_dsc_get_pps_config-func.patch
 	patches.suse/0362-drm-i915-display-Compare-the-readout-dsc-pps-params.patch
 	patches.suse/0363-drm-i915-tc-rename-mtl_tc_port_get_pin_assignment_ma.patch
+	patches.suse/0364-drm-i915-tc-make-intel_tc_port_get_lane_mask-static.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
