--- a/series.conf
+++ b/series.conf
@@ -13375,6 +13375,7 @@
 	patches.suse/0365-drm-i915-tc-move-legacy-code-out-of-the-main-_max_la.patch
 	patches.suse/0366-drm-i915-tc-remove-fia-from-intel_tc_port_fia_max_la.patch
 	patches.suse/0367-drm-i915-psr-Add-psr-sink-error-status-into-sink-sta.patch
+	patches.suse/0368-drm-i915-add-trailing-newlines-to-msgs.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
