--- a/series.conf
+++ b/series.conf
@@ -13379,6 +13379,7 @@
 	patches.suse/0369-drm-i915-cx0-Check-and-increase-msgbus-timeout-thres.patch
 	patches.suse/0370-drm-i915-Constify-LUT-entries-in-checker.patch
 	patches.suse/0371-drm-i915-dsb-Dump-the-DSB-command-buffer-when-DSB-fa.patch
+	patches.suse/0372-drm-i915-dsb-Avoid-corrupting-the-first-register-wri.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
