--- a/series.conf
+++ b/series.conf
@@ -13381,6 +13381,7 @@
 	patches.suse/0371-drm-i915-dsb-Dump-the-DSB-command-buffer-when-DSB-fa.patch
 	patches.suse/0372-drm-i915-dsb-Avoid-corrupting-the-first-register-wri.patch
 	patches.suse/0373-drm-i915-dsb-Don-t-use-indexed-writes-when-byte-enab.patch
+	patches.suse/0374-drm-i915-Stop-forcing-clock-gating-init-for-future-p.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
