--- a/series.conf
+++ b/series.conf
@@ -13385,6 +13385,7 @@
 	patches.suse/0375-drm-i915-adlp-Stop-calling-gen12lp_init_clock_gating.patch
 	patches.suse/0376-drm-i915-display-Extract-display-workarounds-from-cl.patch
 	patches.suse/0377-drm-i915-display-Apply-workarounds-during-display-in.patch
+	patches.suse/0378-drm-i915-dsc-improve-clarity-of-the-pps-reg-read-wri.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
