--- a/series.conf
+++ b/series.conf
@@ -13387,6 +13387,7 @@
 	patches.suse/0377-drm-i915-display-Apply-workarounds-during-display-in.patch
 	patches.suse/0378-drm-i915-dsc-improve-clarity-of-the-pps-reg-read-wri.patch
 	patches.suse/0379-drm-i915-dsc-have-intel_dsc_pps_read_and_verify-retu.patch
+	patches.suse/0380-drm-i915-dsc-have-intel_dsc_pps_read-return-the-valu.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
