--- a/series.conf
+++ b/series.conf
@@ -13390,6 +13390,7 @@
 	patches.suse/0380-drm-i915-dsc-have-intel_dsc_pps_read-return-the-valu.patch
 	patches.suse/0381-drm-i915-dsc-rename-pps-write-to-intel_dsc_pps_write.patch
 	patches.suse/0382-drm-i915-dsc-drop-redundant-0-assignments.patch
+	patches.suse/0383-drm-i915-dsc-clean-up-pps-comments.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
