--- a/series.conf
+++ b/series.conf
@@ -13393,6 +13393,7 @@
 	patches.suse/0383-drm-i915-dsc-clean-up-pps-comments.patch
 	patches.suse/0384-drm-i915-dsc-add-the-PPS-number-to-the-register-cont.patch
 	patches.suse/0385-drm-i915-dsc-use-REG_BIT-REG_GENMASK-and-friends-for.patch
+	patches.suse/0386-drm-i915-gt-rename-DBG-to-GTT_TRACE.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
