--- a/series.conf
+++ b/series.conf
@@ -13398,6 +13398,7 @@
 	patches.suse/0388-drm-i915-Fix-FEC-pipe-A-vs.-DDI-A-mixup.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/0390-drm-i915-Split-some-long-lines-in-hsw_fdi_link_train.patch
+	patches.suse/0391-drm-i915-Stop-spamming-the-logs-with-PLL-state.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
