--- a/series.conf
+++ b/series.conf
@@ -13399,6 +13399,7 @@
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/0390-drm-i915-Split-some-long-lines-in-hsw_fdi_link_train.patch
 	patches.suse/0391-drm-i915-Stop-spamming-the-logs-with-PLL-state.patch
+	patches.suse/0392-drm-i915-Reduce-combo-PHY-log-spam.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
