--- a/series.conf
+++ b/series.conf
@@ -13402,6 +13402,7 @@
 	patches.suse/0392-drm-i915-Reduce-combo-PHY-log-spam.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/0394-drm-i915-dsc-Fix-pic_width-readout.patch
+	patches.suse/0395-drm-Reorder-drm_sysfs_connector_remove-vs.-drm_debug.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
