--- a/series.conf
+++ b/series.conf
@@ -13404,6 +13404,7 @@
 	patches.suse/0394-drm-i915-dsc-Fix-pic_width-readout.patch
 	patches.suse/0395-drm-Reorder-drm_sysfs_connector_remove-vs.-drm_debug.patch
 	patches.suse/0396-drm-sysfs-Register-ddc-symlink-later.patch
+	patches.suse/0397-drm-i915-Call-the-DDC-bus-i2c-adapter-ddc.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
