--- a/series.conf
+++ b/series.conf
@@ -13406,6 +13406,7 @@
 	patches.suse/0396-drm-sysfs-Register-ddc-symlink-later.patch
 	patches.suse/0397-drm-i915-Call-the-DDC-bus-i2c-adapter-ddc.patch
 	patches.suse/0398-drm-i915-lvds-Populate-connector-ddc.patch
+	patches.suse/0399-drm-i915-crt-Populate-connector-ddc.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
