--- a/series.conf
+++ b/series.conf
@@ -13409,6 +13409,7 @@
 	patches.suse/0399-drm-i915-crt-Populate-connector-ddc.patch
 	patches.suse/0400-drm-i915-dvo-Populate-connector-ddc.patch
 	patches.suse/0401-drm-i915-dp-Populate-connector-ddc.patch
+	patches.suse/0402-drm-i915-mst-Populate-connector-ddc.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
