--- a/series.conf
+++ b/series.conf
@@ -13412,6 +13412,7 @@
 	patches.suse/0402-drm-i915-mst-Populate-connector-ddc.patch
 	patches.suse/0403-drm-i915-hdmi-Use-connector-ddc-everwhere.patch
 	patches.suse/0404-drm-i915-hdmi-Nuke-hdmi-ddc_bus.patch
+	patches.suse/0405-drm-i915-hdmi-Remove-old-i2c-symlink.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
