--- a/series.conf
+++ b/series.conf
@@ -13414,6 +13414,7 @@
 	patches.suse/0404-drm-i915-hdmi-Nuke-hdmi-ddc_bus.patch
 	patches.suse/0405-drm-i915-hdmi-Remove-old-i2c-symlink.patch
 	patches.suse/0406-drm-i915-sdvo-Constify-mapping-structs.patch
+	patches.suse/0407-drm-i915-fbc-replace-GEM_BUG_ON-to-drm_WARN_ON.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
