--- a/series.conf
+++ b/series.conf
@@ -13416,6 +13416,7 @@
 	patches.suse/0406-drm-i915-sdvo-Constify-mapping-structs.patch
 	patches.suse/0407-drm-i915-fbc-replace-GEM_BUG_ON-to-drm_WARN_ON.patch
 	patches.suse/0408-drm-i915-fb-replace-GEM_WARN_ON-with-drm_WARN_ON.patch
+	patches.suse/0409-drm-i915-dpt-replace-GEM_BUG_ON-with-drm_WARN_ON.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
