--- a/series.conf
+++ b/series.conf
@@ -13419,6 +13419,7 @@
 	patches.suse/0409-drm-i915-dpt-replace-GEM_BUG_ON-with-drm_WARN_ON.patch
 	patches.suse/0410-drm-i915-move-more-of-the-display-probe-to-display-c.patch
 	patches.suse/0411-drm-i915-display-call-gmdid-display-probe-at-a-highe.patch
+	patches.suse/0412-drm-i915-move-intel_display_device_probe-one-level-h.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
