--- a/series.conf
+++ b/series.conf
@@ -13421,6 +13421,7 @@
 	patches.suse/0411-drm-i915-display-call-gmdid-display-probe-at-a-highe.patch
 	patches.suse/0412-drm-i915-move-intel_display_device_probe-one-level-h.patch
 	patches.suse/0413-drm-i915-Remove-runtime-suspended-boolean-from-intel.patch
+	patches.suse/0414-drm-i915-dp_mst-Tune-down-error-message-during-paylo.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
