--- a/series.conf
+++ b/series.conf
@@ -13423,6 +13423,7 @@
 	patches.suse/0413-drm-i915-Remove-runtime-suspended-boolean-from-intel.patch
 	patches.suse/0414-drm-i915-dp_mst-Tune-down-error-message-during-paylo.patch
 	patches.suse/0415-drm-i915-cx0-Add-step-for-programming-msgbus-timer.patch
+	patches.suse/0416-drm-i915-dsi-let-HW-maintain-CLK_POST.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
