--- a/series.conf
+++ b/series.conf
@@ -13425,6 +13425,7 @@
 	patches.suse/0415-drm-i915-cx0-Add-step-for-programming-msgbus-timer.patch
 	patches.suse/0416-drm-i915-dsi-let-HW-maintain-CLK_POST.patch
 	patches.suse/0417-drm-i915-Move-psr-unlock-out-from-the-pipe-update-cr.patch
+	patches.suse/0418-drm-i915-Change-intel_pipe_update_-start-end-calling.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
