--- a/series.conf
+++ b/series.conf
@@ -13434,6 +13434,7 @@
 	patches.suse/0424-drm-i915-Validate-that-the-timings-are-within-the-VR.patch
 	patches.suse/0425-drm-i915-Disable-VRR-during-seamless-M-N-changes.patch
 	patches.suse/0426-drm-i915-Update-VRR-parameters-in-fastset.patch
+	patches.suse/0427-drm-i915-Assert-that-VRR-is-off-during-vblank-evasio.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
