--- a/series.conf
+++ b/series.conf
@@ -13438,6 +13438,7 @@
 	patches.suse/0428-drm-i915-Implement-transcoder-LRR-for-TGL.patch
 	patches.suse/0429-drm-i915-add-a-note-about-fec_enable-with-128b-132b.patch
 	patches.suse/0430-Revert-drm-i915-mst-Populate-connector-ddc.patch
+	patches.suse/0431-drm-i915-xelpdp-Add-XE_LPDP_FEATURES.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
