--- a/series.conf
+++ b/series.conf
@@ -13443,6 +13443,7 @@
 	patches.suse/0433-drm-i915-xe2lpd-FBC-is-now-supported-on-all-pipes.patch
 	patches.suse/0434-drm-i915-display-Remove-FBC-capability-from-fused-of.patch
 	patches.suse/0435-drm-i915-Re-order-if-else-ladder-in-intel_detect_pch.patch
+	patches.suse/0436-drm-i915-xe2lpd-Add-fake-PCH.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
