--- a/series.conf
+++ b/series.conf
@@ -13447,6 +13447,7 @@
 	patches.suse/0437-drm-i915-xe2lpd-Treat-cursor-plane-as-regular-plane-.patch
 	patches.suse/0438-drm-i915-xe2lpd-Don-t-try-to-program-PLANE_AUX_DIST.patch
 	patches.suse/0439-drm-i915-xe2lpd-Register-DE_RRMR-has-been-removed.patch
+	patches.suse/0440-drm-i915-display-Fix-style-and-conventions-for-DP-AU.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
