--- a/series.conf
+++ b/series.conf
@@ -13449,6 +13449,7 @@
 	patches.suse/0439-drm-i915-xe2lpd-Register-DE_RRMR-has-been-removed.patch
 	patches.suse/0440-drm-i915-display-Fix-style-and-conventions-for-DP-AU.patch
 	patches.suse/0441-drm-i915-display-Use-_PICK_EVEN_2RANGES-in-DP-AUX-re.patch
+	patches.suse/0442-drm-i915-xe2lpd-Re-order-DP-AUX-regs.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
