--- a/series.conf
+++ b/series.conf
@@ -13452,6 +13452,7 @@
 	patches.suse/0442-drm-i915-xe2lpd-Re-order-DP-AUX-regs.patch
 	patches.suse/0443-drm-i915-xe2lpd-Handle-port-AUX-interrupts.patch
 	patches.suse/0444-drm-i915-xe2lpd-Read-pin-assignment-from-IOM.patch
+	patches.suse/0445-drm-i915-xe2lpd-Enable-odd-size-and-panning-for-plan.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
