--- a/series.conf
+++ b/series.conf
@@ -13460,6 +13460,7 @@
 	patches.suse/0450-drm-i915-xe2lpd-Add-display-power-well.patch
 	patches.suse/0451-drm-i915-xe2lpd-Add-DC-state-support.patch
 	patches.suse/0452-drm-i915-lnl-Start-using-CDCLK-through-PLL.patch
+	patches.suse/0453-drm-i915-bios-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
