--- a/series.conf
+++ b/series.conf
@@ -13462,6 +13462,7 @@
 	patches.suse/0452-drm-i915-lnl-Start-using-CDCLK-through-PLL.patch
 	patches.suse/0453-drm-i915-bios-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/0454-drm-i915-display-Print-display-info-inside-driver-di.patch
+	patches.suse/0455-drm-i915-irq-Clear-GFX_MSTR_IRQ-as-part-of-IRQ-reset.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
