--- a/series.conf
+++ b/series.conf
@@ -13465,6 +13465,7 @@
 	patches.suse/0455-drm-i915-irq-Clear-GFX_MSTR_IRQ-as-part-of-IRQ-reset.patch
 	patches.suse/0456-drm-i915-dp-refactor-aux_ch_name.patch
 	patches.suse/0457-drm-i915-cx0-prefer-forward-declarations-over-includ.patch
+	patches.suse/0458-drm-i915-dsb-Use-non-locked-register-access.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
